* add Lorentzian peak shape in addition to Gaussian in new function
  multPeakFit
* some minor bug fixes

v1.0.2, 2013-09-17

* add documentation source to tarball
* generate info file from documentation
* make c extension work with python3, and in general make XU more python3
  friendly
* fix bug in SiGe materials lattice_const_AB function

v1.0.1, 2013-09-14

* new way of parsing motor positions and counter values from EDF files
* some fixes and updates in the ID01 example
* added new predefined materials
* new Material method "distances" to calculate atomic distances in the unit
  cell
* some minor bug-fixes 

v1.0, 2013-07-22

* add new example with hotpixelkill variant
* fix unicode string errors on Windows

v0.99.2, 2013-07-18

* fix issue in python-c-extension on windows
* add new example
* add functions to fit multiple Gaussian to a spectrum
* add tests to released files

v0.99.1, 2013-07-03

* documentation updates
* function analysis.area_detector_calib2 renamed to area_detector_calib_hkl
* added function to remove spikes from 1d data arrays 

v0.99, 2013-07-01 -- planned to be the initial release on PyPI